[package]
name = "tibia"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
crossbeam-queue = "0.3"
chrono = "0.4"